--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "antd": "^4.9.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
