--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config=build/webpack.dev.config.js",
-    "build": "webpack --config=build/webpack.dev.config.js"
+    "commit": "git add . && git commit -m 'commit' && git push"
   },
   "repository": {
     "type": "git",
