--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.9.2",
+    "braft-editor": "^2.3.9",
+    "braft-extensions": "^0.1.1",
+    "draft-js-prism": "^1.0.6",
     "normalize.css": "^8.0.1",
+    "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
