--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "uuid": "^8.3.1"
   }
 }
