--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
     "postcss-loader": "^4.1.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
