--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,9 @@
       "@babel/plugin-transform-runtime", {
         "corejs": 3
       }
-    ]
+    ],
+    "@babel/plugin-proposal-nullish-coalescing-operator", // ??
+    "@babel/plugin-proposal-optional-chaining", // a?.b?.c
+    "@babel/plugin-proposal-class-properties" // 直接在class中使用箭头函数，不用每次在constructor中绑定
   ]
 }
