--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "timeago.js": "^4.0.2",
     "uuid": "^8.3.1"
   }
 }
