--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     [
       "@babel/plugin-transform-runtime", {
         "corejs": 3
