--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "draft-js-prism": "^1.0.6",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.22.0",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -68,6 +69,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "throttle-debounce": "^3.0.1",
     "timeago.js": "^4.0.2",
     "uuid": "^8.3.1"
   }
