--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "koa": "^2.13.0",
